After closing project modal, it will shift the body left so fixed that.

--- a/app/sass/project_style.scss
+++ b/app/sass/project_style.scss
@@ -14,6 +14,8 @@ html {
 body {
     color: $accent-colour;
     @include body-text;
+    padding-right: 0px !important;
+    margin-right: 0px !important;
 }
 
 
